# otfcc_cmake

./: CMakeLists.txt  README.md  premake5.lua
cmake/: stdlibQuery.cmake
dep/: CMakeLists.txt
src/libcff/: cff-codecs.c
src/support/json/: json-ident.c
src/tools/: otfccbuild.c  platform.h
